--- a/vote.html
+++ b/vote.html
@@ -7,8 +7,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="vote">
+  <header>
     <button onclick="location.href='profile.html'" class="profile-btn">Profile</button>
+  </header>
+  <div class="vote">
     <h1>SRC Candidates</h1>
     <div id="presidentCategory">
       <h2>SRC President</h2>
