--- a/login.html
+++ b/login.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div class="container">
+    <img src="images/logo.png" alt="" width="80">
     <h1>Login to Your Account</h1>
     <form id="loginForm">
         <div>
