--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>University Voting Portal</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="bground">
   <div class="container">
     <img src="images/logo.png" alt="" width="80">
     <h2>Welcome to GCTU <br> Voting Portal</h2>
