--- a/login.html
+++ b/login.html
@@ -6,7 +6,8 @@
   <title>Login</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="bground">
+  <!-- <img src="images/gctu.jpg" alt="" class="bground"> -->
   <div class="containerr">
     <img src="images/logo.png" alt="" width="80">
     <h1>Login to Your Account</h1>
